# solana-helloworld-zig

./: .gitignore  .gitmodules  README.md  build.zig  build.zig.zon  install-rust-build-deps.sh  install-solana-zig.sh
.github/workflows/: main.yml
cli/: Cargo.toml  test.sh
cli/src/: main.rs
program-test/: Cargo.toml  test.sh
program-test/tests/: functional.rs
src/: error.zig  instruction.zig  main.zig  state.zig
