[package]
name = "cli-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
solana-clap-v3-utils = "2.3.0"
solana-cli-config = "2.3.0"
solana-client = "2.3.0"
solana-logger = "2.2.0"
solana-remote-wallet = "2.3.0"
solana-sdk = "2.3.0"
solana-system-interface = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-sdk-ids = "2.2.1"
solana-test-validator = "2.3.0"

[workspace]
