[package]
name = "cli-template"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.19"
solana-clap-v3-utils = "3.0.0"
solana-cli-config = "3.0.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-logger = "3.0.0"
solana-remote-wallet = "3.0.0"
solana-sdk = "3.0.0"
solana-system-interface = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-sdk-ids = "3.0.0"
solana-test-validator = "3.0.0"

[workspace]
